add tipnextcloud module

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -104,6 +104,7 @@ body[data-theme='cbe'][data-role="user"] {
                   justify-content: center;
                   &.mod_resource,
                   &.mod_tresipuntvideo,
+                  &.mod_tipnextcloud,
                   &.mod_tresipuntaudio,
                   &.mod_folder,
                   &.mod_url,
