add tipnextcloud funcionality

--- a/templates/components/create_file_nextcloud.mustache
+++ b/templates/components/create_file_nextcloud.mustache
@@ -9,7 +9,7 @@
     <div id="create_file_nextcloud_body">
         <div class="notice_nc">
             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-            <span class="notice_nextcloud_create">{{# str }} notice_filecreate, theme_cbe {{/ str }}</span>
+            <span class="notice_nextcloud_create">{{ nextcloud_desc }}</span>
         </div>
         <div id="nextcloud_error"></div>
         <div class="hide_header"></div>
