style local mail

--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -20,6 +20,7 @@
 @import "components/modassign";
 @import "components/assignsubmission_tipnc";
 @import "components/createfile_nextcloud";
+@import "components/local_mail";
 
 @import "layout/navbar";
 @import "layout/flatnav";
