styles for tip NC

--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -21,6 +21,7 @@
 @import "components/assignsubmission_tipnc";
 @import "components/createfile_nextcloud";
 @import "components/local_mail";
+@import "components/atto_tipnc";
 
 @import "layout/navbar";
 @import "layout/flatnav";
