--- a/templates/modals/board_create_module.mustache
+++ b/templates/modals/board_create_module.mustache
@@ -53,7 +53,7 @@
                         </li>
                         {{/ create.has_favourites }}
                         <li class="nav-item">
-                            <a class="nav-link" id="recommended-tab" data-toggle="tab" href="#recommended" role="tab" aria-controls="recommended" aria-selected="false">
+                            <a class="nav-link {{^ create.has_favourites }}active{{/ create.has_favourites }}" id="recommended-tab" data-toggle="tab" href="#recommended" role="tab" aria-controls="recommended" aria-selected="false">
                                 {{# str }} recommended {{/ str }}
                             </a>
                         </li>
@@ -85,7 +85,7 @@
                             </ul>
                         </div>
                         {{/ create.has_favourites }}
-                        <div class="tab-pane fade" id="recommended" role="tabpanel">
+                        <div class="tab-pane fade {{^ create.has_favourites }}show active{{/ create.has_favourites }}" id="recommended" role="tabpanel">
                             <ul class="select-modules">
                                 {{# create.recommended }}
                                     <li class="select-module">
