DDNEW-261: create all icons svg

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -110,6 +110,8 @@ body[data-theme='cbe'][data-role="user"] {
                   &.mod_url,
                   &.mod_page,
                   &.mod_label,
+                  &.mod_book,
+                  &.mod_imscp,
                   &.mod_tresipuntshare {
                     background-color: white;
                     border: 4px solid $primary-color;
