DDNEW-262: añadir la maquetación de bloques en el curso

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -18,6 +18,8 @@ $footer-height: 64px;
 $border-input: 10px;
 $grey-hight: #717171;
 
+$blockright-size: 19rem;
+
 $font: Montserrat, sans-serif;
 $fontbold: Montserrat Bold, sans-serif;
 $fontthin: Montserrat Thin, sans-serif;
