--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -22,6 +22,7 @@
 @import "components/createfile_nextcloud";
 @import "components/local_mail";
 @import "components/atto_tipnc";
+@import "components/blocks";
 
 @import "layout/navbar";
 @import "layout/flatnav";
