--- a/templates/columns2/columns2_course.mustache
+++ b/templates/columns2/columns2_course.mustache
@@ -131,4 +131,8 @@
         viewassign.initViewAssign();
     });
 
+    require(['theme_cbe/blockright'], function(blockright) {
+        blockright.initBlockright();
+    });
+
 {{/js}}
