--- a/templates/core_course/coursecard.mustache
+++ b/templates/core_course/coursecard.mustache
@@ -74,7 +74,7 @@
         </div>
         <div class="action-visibles">{{$menu}}{{/menu}}</div>
     </div>
-    <div data-region="coursecard-footer-{{ id }}"></div>
+    <div data-region="coursecard-footer-{{ id }}" class="course-card-footer-main"></div>
 </div>
 
 {{#js}}
