--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -10,7 +10,8 @@ $grey-medium: #929292;
 $grey-border: #D9D9D9;
 $grey-medium2: #C2C2C2;
 $grey-light: #F0F0F0;
-$shadow-color: rgba(0, 0, 0, 0.2);;
+$shadow-color: rgba(0, 0, 0, 0.16);
+$box-shadow: 0 0 10px rgb(0 0 0 / 10%);
 
 $nav-height: 50px;
 $footer-height: 64px;
@@ -20,9 +21,9 @@ $grey-hight: #717171;
 
 $blockright-size: 19rem;
 
-$font: Montserrat, sans-serif;
-$fontbold: Montserrat Bold, sans-serif;
-$fontthin: Montserrat Thin, sans-serif;
+$font: LeagueSpartan, sans-serif;
+$fontbold: LeagueSpartan Bold, sans-serif;
+$fontthin: LeagueSpartan Light, sans-serif;
 
 $font-footer: PFHandbookPro Thin, sans-serif;
 
