--- a/scss/layout/_fullheader.scss
+++ b/scss/layout/_fullheader.scss
@@ -2,7 +2,7 @@ body[data-theme='cbe'][data-role='user'] {
 
   #page-header {
     .card.header, .card.header-board {
-      box-shadow: $shadow-color 0 3px 6px;
+      box-shadow: $shadow-color 0 0 10px;
     }
   }
 
@@ -10,21 +10,27 @@ body[data-theme='cbe'][data-role='user'] {
     margin-bottom: 10px;
     .is_custom {
       .card-body {
-        padding: 24px 24px 14px;
+        padding: 25px 50px 11px;
         .text {
           .title {
             font-size: 44px;
             font-weight: 600;
             letter-spacing: 1px;
+            margin-top: 11px;
+            color: white;
             @media (max-width: 500px) {
               font-size: 24px;
               margin-right: 35px;
             }
           }
           .subtitle {
-            font-size: 23px;
-            color: $grey-medium;
+            font-size: 16px;
             margin-bottom: 4px;
+            background-color: #cdcdcd;
+            display: inline;
+            padding: 6px 12px 3px;
+            border-radius: 10px;
+            color: #737373;
             @media (max-width: 500px) {
               margin-right: 35px;
               font-size: 18px;
@@ -33,33 +39,27 @@ body[data-theme='cbe'][data-role='user'] {
         }
         .tool-tooltip {
           position: absolute;
-          right: -10px;
+          right: 10px;
           top: 15px;
           .tool-link {
-            background-color: $primary-color;
-            height: 45px;
-            width: 60px;
+            background-color: $grey-light;
+            height: 36px;
+            width: 36px;
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 9px 0 0 10px;
+            border-radius: 5px;
             cursor: pointer;
             i {
-              color: white;
+              color: $black-ligth;
               font-size: 25px;
             }
-            .triangle {
-              width: 0;
-              height: 0;
-              border-top: 10px solid $primary-color-hard;
-              border-right: 10px solid transparent;
-              position: absolute;
-              bottom: -10px;
-              right: 0;
-            }
             &:hover, &:focus {
-              background-color: $primary-color-light !important;
+              background-color: $primary-color !important;
               text-decoration: none;
+              i {
+                color: white;
+              }
             }
           }
         }
@@ -76,6 +76,7 @@ body[data-theme='cbe'][data-role='user'] {
       padding: 0;
       .degraded {
         background: linear-gradient(180deg,rgba(0,0,0,0.6) 0%,rgba(0,0,0,0) 80%);
+        border-radius: 5px;
         padding: 24px;
       }
     }
@@ -97,13 +98,12 @@ body[data-theme='cbe'][data-role='user'] {
       padding: 0;
       .degraded {
         background: linear-gradient(180deg,rgba(0,0,0,0.4) 0%,rgba(0,0,0,0) 110%);
+        border-radius: 5px;
         padding: 24px;
       }
       .text {
         .title {
           font-size: 44px;
-          font-weight: 600;
-          letter-spacing: 1px;
           margin-bottom: 5px;
           color: white;
           span.postitle {
