--- a/scss/layout/_myoverview.scss
+++ b/scss/layout/_myoverview.scss
@@ -1,5 +1,9 @@
 body[data-theme='cbe'][data-role='user'] {
 
+  .block_myoverview .content {
+    margin-top: 3px !important;
+  }
+
   #region-main {
     #block-region-content {
       section.card {
@@ -18,12 +22,13 @@ body[data-theme='cbe'][data-role='user'] {
             div[data-region="myoverview"] {
               .card.dashboard-card[data-region="course-content"] {
                 background-color: white;
-                border: 1px solid $grey-border;
-                box-shadow: $shadow-color 0 3px 6px;
-                border-radius: 0;
+                box-shadow: $box-shadow !important;
+                border: none;
+                border-radius: 5px;
                 margin-right: 24px;
-                margin-bottom: 24px;
+                margin-bottom: 10px;
                 margin-top: 15px;
+
                 @media (min-width: 576px) {
                   width: calc(100% - 0.6rem);
                 }
@@ -39,15 +44,26 @@ body[data-theme='cbe'][data-role='user'] {
                 .card-img.dashboard-card-img {
                   height: 150px;
                   min-height: 150px;
+                  border-top-right-radius: 5px;
+                  border-top-left-radius: 5px;
                 }
                 .coursename {
                   font-size: 22px;
                   font-family: $fontbold;
+                  margin-left: 5px;
                 }
                 .categoryname {
-                  font-family: $fontbold;
+                  font-family: $font;
                   color: $grey-medium;
+                  background-color: $grey-light;
+                  padding: 2px 9px 0;
+                  border-radius: 15px;
+                  font-size: 12px;
                 }
+                .course-info-container {
+                  padding: 30px 12px 12px;
+                }
+
               }
             }
           }
