--- a/scss/pages/_copycourse_progress.scss
+++ b/scss/pages/_copycourse_progress.scss
@@ -5,7 +5,9 @@ body[data-theme='cbe'][data-role='user'] {
     main.contain {
       background-color: white;
       padding: 30px;
-      border: 1px solid $border-color;
+      border: none;
+      border-radius: 5px;
+      box-shadow: $box-shadow;
       margin-top: 0;
       h2 {
         font-size: 28px;
