--- a/scss/pages/_module.scss
+++ b/scss/pages/_module.scss
@@ -4,7 +4,9 @@ body[data-theme='cbe'][data-role='user'] {
     #region-main.in_course[data-region="module"],
     #region-main.in_course[data-region="modedit"] {
       background-color: white;
-      border: 1px solid $border-color;
+      border: none;
+      border-radius: 5px;
+      box-shadow: $box-shadow;
       padding: 30px !important;
       margin-bottom: 15px;
       @media (max-width: 600px) {
@@ -30,7 +32,7 @@ body[data-theme='cbe'][data-role='user'] {
           width: 60px;
           height: 60px;
           background-color: $primary-color;
-          border-radius: 30px;
+          border-radius: 6px;
           margin: 0 10px 0 0;
           display: inline-flex;
           align-items: center;
@@ -67,7 +69,7 @@ body[data-theme='cbe'][data-role='user'] {
           }
           &.resource_mod {
             background-color: white;
-            border: 4px solid $primary-color;
+            border: 3px solid $primary-color;
             .module-resource-icon-component-cbe {
               svg.theme-cbe-icon {
                 width: 27px;
