--- a/scss/pages/_user.scss
+++ b/scss/pages/_user.scss
@@ -15,24 +15,19 @@ body[data-theme='cbe'][data-role='user'] {
         a#action-menu-toggle-2,
         a#action-menu-toggle-3,
         a#action-menu-toggle-4 {
-          color: #fff;
-          background-color: $primary-color;
-          padding: 10px 12px;
+          color: $black-ligth;
+          background-color: $grey-light;
+          padding: 5px 6px 3px;
           position: relative;
-          right: -28px;
-          top: -9px;
-          border-radius: 10px 0 0 10px;
+          right: -2px;
+          top: -20px;
+          border-radius: 5px;
           z-index: 2;
+          &:hover {
+            background-color: $primary-color !important;
+            color: white;
+          }
         }
-      }
-      .tri.triangle-edit {
-        width: 0;
-        height: 0;
-        border-top: 10px solid $primary-color-hard;
-        border-right: 10px solid transparent;
-        position: absolute;
-        top: 64px;
-        right: -10px;
       }
     }
   }
