--- a/templates/navbar/menu_apps_button.mustache
+++ b/templates/navbar/menu_apps_button.mustache
@@ -1,16 +1,6 @@
 <div id="menu-apps-btn">
     <button type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <svg id="Menú_Apps" data-name="Menú Apps" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 26 26" {{#darkheader}} fill="#fff" {{/darkheader}} {{^darkheader}} fill="#262626" {{/darkheader}}>
-            <rect id="Rectángulo_2" data-name="Rectángulo 2" width="6" height="6" />
-            <rect id="Rectángulo_1447" data-name="Rectángulo 1447" width="6" height="6" transform="translate(0 10)" />
-            <rect id="Rectángulo_1450" data-name="Rectángulo 1450" width="6" height="6" transform="translate(0 20)" />
-            <rect id="Rectángulo_1440" data-name="Rectángulo 1440" width="6" height="6" transform="translate(10)" />
-            <rect id="Rectángulo_1446" data-name="Rectángulo 1446" width="6" height="6" transform="translate(10 10)" />
-            <rect id="Rectángulo_1449" data-name="Rectángulo 1449" width="6" height="6" transform="translate(10 20)" />
-            <rect id="Rectángulo_1441" data-name="Rectángulo 1441" width="6" height="6" transform="translate(20)" />
-            <rect id="Rectángulo_1445" data-name="Rectángulo 1445" width="6" height="6" transform="translate(20 10)" />
-            <rect id="Rectángulo_1448" data-name="Rectángulo 1448" width="6" height="6" transform="translate(20 20)" />
-        </svg>
+        {{#pix}} menu_apps2, theme_cbe {{/pix}}
     </button>
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" >
         {{# active }}
