--- a/templates/sections/course_left_section_pending_tasks_component.mustache
+++ b/templates/sections/course_left_section_pending_tasks_component.mustache
@@ -1,6 +1,9 @@
 <div id="course_left_section_pending_tasks" data-region="pending_tasks">
     {{# title }}
         <h3 class="title">
+            <span class="icon-bcg">
+                <i class="icon fa fa-bars fa-fw " aria-hidden="true"></i>
+            </span>
             {{ title }}
             <span class="expand-menu" data-action="expand">
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
