--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -473,6 +473,7 @@ body[data-theme='cbe'][data-role="user"] {
   .module_media {
     .media-content {
       display: none;
+      padding-bottom: 4px;
       .description {
         padding: 15px 30px 30px;
         text-align: left;
