--- a/scss/pages/_moreinfo.scss
+++ b/scss/pages/_moreinfo.scss
@@ -82,6 +82,7 @@ body[data-theme='cbe'][data-role='user'] {
             }
             .media-content {
               display: inline !important;
+              padding-bottom: 4px;
               .media-resource {
                 border: 1px solid #dee2e6;
                 margin: 0 20px;
