--- a/scss/pages/_moreinfo.scss
+++ b/scss/pages/_moreinfo.scss
@@ -85,7 +85,7 @@ body[data-theme='cbe'][data-role='user'] {
               padding-bottom: 4px;
               .media-resource {
                 border: 1px solid #dee2e6;
-                margin: 0 20px;
+                margin: 0 20px 20px
               }
               .description {
                 border: 1px solid #dee2e6;
