--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -66,6 +66,8 @@ body[data-theme='cbe'][data-role="user"] {
     margin-bottom: 15px;
     position: relative;
     border: none;
+    border-radius: 5px;
+    box-shadow: $box-shadow;
     .alert-msgs {
       display: flex;
       position: absolute;
@@ -246,11 +248,13 @@ body[data-theme='cbe'][data-role="user"] {
         position: absolute;
         right: 0;
         margin-right: 20px;
+        top: -7px;
         @media (max-width: 600px) {
           max-width: 74px;
           flex-wrap: wrap;
           height: 60px;
-          top: 17px;
+          top: 10px;
+          right: -31px;
         }
         >.action {
           position: relative;
@@ -280,8 +284,8 @@ body[data-theme='cbe'][data-role="user"] {
           font-size: 16px;
           width: 30px;
           height: 30px;
-          right: -3px;
-          background-color: $grey-medium2;
+          right: -6px;
+          background-color: white;
         }
       }
     }
