--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -16,9 +16,13 @@ body[data-theme='cbe'][data-role='user'][data-context="index"] {
     display: inline-block;
   }
 
-  &#page-site-index #region-main div[role="main"] {
-    border: 1px solid #d9d9d9;
-    padding: 0 19px;
+  &#page-site-index #region-main {
+    border-radius: 5px;
+    border: none;
+    box-shadow: $box-shadow;
+    div[role="main"] {
+      padding: 0 19px;
+    }
   }
 
   #region-main {
