DDNEW-380: user fullname added to user menu

--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -195,9 +195,12 @@ body[data-theme='cbe'] {
           margin: 7px 0;
           &:hover, &:active, &:focus {
             background-color: $grey-light;
-            span.menu-action-text, i.icon {
+            span.menu-action-text, i.icon, span.onlytext {
               color: $black-ligth;
             }
+          }
+          span.onlytext {
+            padding-left: 29px;
           }
         }
       }
